# kpass

./: Pass_Generated.txt  Password_Generator.py  README.md  Read_Passwords.py  Usage_Suggestion.py  __init__.py  generator.py  ksenhas.py  lersenhas.py  passgen.py  passw  passw.py  pypi-AgEIcHlwaS5vcmcCJGZlZmQ5YzU2LWE0MjktNGUwZS04ZGI2LTRkYjNlODRiOTY0ZgACKlszLCJmZmFjNTBlNC0xZjE5LTQ3YzQtODIyMy0wNWQwMmI4ZGQyYWEiXQAABiDwe2d2R9XhP74ibKFrN7BQnNLd-iBG7X7lN1orTqNvXQ  pyproject.toml  setup.py
Passwords_Generator.egg-info/: PKG-INFO  SOURCES.txt
kpass/: __init__.py  generator.py  main.py
usage_examples/: generator_usage_example.py  read_passwords.py  usage_suggestion.py
