[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Passwords_Generator"
version = "0.1.0"
description = "Password generator library"
readme = "README.md"
requires-python = ">=3.6"
authors = [
{ name = "Lucas Paulino Da Silva (KsxDynamic)", email = "lucas.workps@gmail.com" }
]
dependencies = [
    "rich"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
